# make-home-links

./: .gitignore  README.md  pyproject.toml
make_home_links/: cli.py  install.py  log.py
